fix: hide carousel on mobile view

--- a/src/pages/LandingPage.module.scss
+++ b/src/pages/LandingPage.module.scss
@@ -14,3 +14,10 @@
   height: calc(100vh - 192px);
   scroll-snap-align: start;
 }
+
+@media screen and (max-width: 768px) {
+  .hide-on-mobile {
+    display: none;
+  }
+  
+}
